services/05_netbox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    cert-manager.io/cluster-issuer: cummings-online-local-issuer
  name: netbox
  namespace: cummings-online-local
spec:
  rules:
    - host: netbox.cummings-online.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: netbox
                port:
                  number: 80
  tls:
    - secretName: netbox-tls
      hosts:
       - netbox.cummings-online.local
